--- a/style.css
+++ b/style.css
@@ -1,3 +1,12 @@
 body {
   background-color: #f5f5f5;
 }
+
+#text-to-translate {
+  width: 100%;
+  min-height: 200px;
+}
+
+#translated {
+  font-size: 200%;
+}
