--- a/style.css
+++ b/style.css
@@ -1,3 +1,6 @@
+/* font-family: 'Dancing Script', cursive; */
+/* font-family: 'Roboto Condensed', sans-serif; */
+
 * {
     box-sizing: border-box;
     margin: 0;
@@ -6,10 +9,45 @@
 
 body {
     display: flex;
-    flex-direction: column;
+    justify-content: center;
     align-items: center;
+    height: 100vh;
+    flex-direction: column;
+    font-family: 'Roboto Condensed', sans-serif;
+    /* background-image: url(); */
 }
 
+
+
+/* -------------------------- */
+
 .upper-right {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     margin: 10px 20px;
-}
+  }
+
+  .upper-right h2 {
+      padding: 10px;
+  }
+
+/* ---------------------- */
+
+
+
+  button {
+      background-color: rgb(24, 148, 55);
+      color: aliceblue;
+      margin: 10px;
+      padding: 10px 20px;
+      font-size: 20px;
+      border: 1px solid black;
+      border-radius: 10px;
+      cursor: pointer;
+      align-items: center;
+  }
+
+  p {
+      color: brown;
+  }
