--- a/style.css
+++ b/style.css
@@ -1,42 +1,144 @@
-/* font-family: 'Dancing Script', cursive; */
-/* font-family: 'Roboto Condensed', sans-serif; */
-
 * {
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
+	box-sizing: border-box;
+	margin: 0;
+	padding: 0;
+    font-family: 'Roboto Condensed', sans-serif;
 }
 
-body {
+
+html {
+	font-size: 62.5%;
+}
+
+.header-img {
+    /* position: relative; */
+    width: 100%;
+    height: 100vh;
+    background-image: url(./images/drew-beamer-xU5Mqq0Chck-unsplash.jpg);
+    background-size: cover;
+    background-position: center;
+}
+
+.header-text {
+	display: inline-block;
+	padding-top: 10%;
+	padding-left: 3%;
+	font-size: 2.5rem;
+	color: rgba(6, 124, 98, 0.842);
+}
+
+nav {
+	padding: 10px;
+	width: 100%;
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+}
+
+nav:hover {
+	background-color: rgb(164, 168, 168);
+	transition: .3s;
+}
+
+nav li {
+	display: inline-block;
+	flex-direction: row;
+	justify-content: center;
+	align-items: center;
+}
+
+nav a {
+	padding: 20px;
+	color: rgb(66, 60, 60);
+	text-decoration: none;
+	text-transform: uppercase;
+	font-weight: bold;
+	font-size: 1.8rem;
+	letter-spacing: 1px;
+	transition: color 0.2s;
+}
+
+nav a:hover {
+	color: blue;
+}
+
+.fa-accusoft {
+	font-size: 3rem;
+	color: rgba(6, 124, 98, 0.842);
+}
+
+.logo span {
+	font-size: 3rem;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+/* NAVIGATION */
+
+/* nav {
+	font-size: 2rem;
+	/* text-transform: uppercase; */
+
+
+/* .navbar-toggler {
+	font-size: 1.8rem;
+} */ 
+
+/* .navbar-brand {
+   	letter-spacing: 3px;
+	font-size: 2.5rem;
+	font-weight: bold;
+   } */
+   
+/* .dropdown-menu {
+    font-size: 1.8rem;
+} */
+
+
+
+/* input::-webkit-outer-spin-button,
+        input::-webkit-inner-spin-button {
+            -webkit-appearance: none;
+            margin: 0;
+        } */
+
+/* body {
     display: flex;
     justify-content: center;
     align-items: center;
     height: 100vh;
     flex-direction: column;
     font-family: 'Roboto Condensed', sans-serif;
-    /* background-image: url(); */
-}
-
-
+    background-image: url();
+} */
 
 /* -------------------------- */
 
-.upper-right {
+/* .upper-right {
     display: flex;
     flex-direction: column;
     align-items: center;
     margin: 10px 20px;
-  }
+  } */
 
-  .upper-right h2 {
+/* .upper-right h2 {
       padding: 10px;
-  }
+  } */
 
 /* ---------------------- */
 
-
-
-  button {
+/* button {
       background-color: rgb(24, 148, 55);
       color: aliceblue;
       margin: 10px;
@@ -46,8 +148,8 @@ body {
       border-radius: 10px;
       cursor: pointer;
       align-items: center;
-  }
-
+  } */
+/* 
   p {
       color: brown;
-  }
+  } */
