--- a/style-calculator.css
+++ b/style-calculator.css
@@ -4,6 +4,12 @@
 	padding: 0;
 }
 
+/* :root {
+    --first-color: rgb(250, 20, 6);
+    --second-color: rgb(19, 139, 61);
+    --hover-color: rgb(68, 26, 184);
+} */
+
 body {
 	display: flex;
 	justify-content: center;
@@ -17,187 +23,221 @@ body {
 }
 
 .wrapper {
-    margin: 20px;
+	/* position: relative; */
+	margin: 20px;
 	padding: 40px;
 	width: 500px;
-    text-align: center;
+	text-align: center;
 	background: rgba(97, 106, 169, 0.74);
 	border-radius: 16px;
 	box-shadow: 0 4px 30px rgba(28, 127, 131, 0.1);
 	backdrop-filter: blur(7.6px);
 	-webkit-backdrop-filter: blur(7.6px);
 	border: 1px solid rgba(97, 106, 169, 0.65);
-    color:beige
+	color: beige;
 }
 
 .wrapper h1 {
-    font-size: 36px;
-    margin-bottom: 20px;
+	font-size: 36px;
+	margin-bottom: 20px;
+}
+
+.info  {
+	display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    /* align-items:flex-start; */
+    position: absolute;
+	top: -10px;
+    right: 10px;
+    width: 40px;
+    height: 100px;
+  
+	/* display: block; */
+	font-size: 20px;
+	padding: 10px;
+	margin: 5px;
+	/* float: right; */
+	/* color: var(--second-color); */
+	cursor: pointer;
+	transition: color 0.3s;
+
+}
+
+.info .fa-palette {
+	right: 40px;
+}
+
+.info .fa-circle-info {
+	right: 10px;
 }
 
 .converter-body {
-    display: flex;
-    justify-content: center;
-    align-items: center;
+	display: flex;
+	justify-content: center;
+	align-items: center;
 }
 
-.left, .right {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+.left,
+.right {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
 }
 
 .converter-body input {
-    width: 100%;
-    font-size: 24px;
-    margin-bottom: 10px;
+	width: 100%;
+	font-size: 24px;
+	margin-bottom: 10px;
 }
 
-.converter-body input, .converter-body select {
-    color:aliceblue;
-    border: 1px solid;
-    border-radius: 5px;
-    background: none;
-    text-align: center;
-   
+.converter-body input,
+.converter-body select {
+	color: aliceblue;
+	border: 1px solid;
+	border-radius: 5px;
+	background: none;
+	text-align: center;
 }
 
 ::-webkit-input-placeholder {
-    color: aliceblue;
+	color: aliceblue;
 }
 
 .converter-body select {
-    font-size: 16px;
-    padding: 5px 10px;
-    cursor: pointer;
+	font-size: 16px;
+	padding: 5px 10px;
+	cursor: pointer;
 }
 
-.converter-body input:focus, .converter-body select:focus {
-outline: none;
-/* color: rgb(25, 64, 172); */
+.converter-body input:focus,
+.converter-body select:focus {
+	outline: none;
+	/* color: rgb(25, 64, 172); */
 }
 
-.converter-body option, .converter-body select {
-     font-weight: bold;
-     letter-spacing: 2px;
+.converter-body option,
+.converter-body select {
+	font-weight: bold;
+	letter-spacing: 2px;
 }
 
 .converter-body option {
-    color: rgba(0, 0, 0, 0.61);
+	color: rgba(0, 0, 0, 0.61);
 }
 
 .changing {
-    align-self: flex-end;
-    margin: 5px;
-    padding: 5px 20px;
-    font-size: 16px;
-    color: rgb(78, 3, 66);
-    background-image: linear-gradient(120deg, rgba(24, 128, 224, 0), rgb(22, 20, 153));
-    border: none;
-    border-radius: 15px;
-    cursor: pointer;
+	align-self: flex-end;
+	margin: 5px;
+	padding: 5px 20px;
+	font-size: 16px;
+	color: rgb(78, 3, 66);
+	background-image: linear-gradient(
+		120deg,
+		rgba(24, 128, 224, 0),
+		rgb(22, 20, 153)
+	);
+	border: none;
+	border-radius: 15px;
+	cursor: pointer;
 }
 
 .changing:focus {
-    outline: none;
-    background-image: linear-gradient(120deg, rgba(10, 42, 71, 0), rgb(4, 4, 26));
+	outline: none;
+	background-image: linear-gradient(120deg, rgba(10, 42, 71, 0), rgb(4, 4, 26));
 }
 
-.rate-info, .total {
-    font-size: 18px;
-    padding-top: 15px;
+.rate-info,
+.total {
+	font-size: 18px;
+	padding-top: 15px;
 }
 
-@media (min-width:320px) {
-    .wrapper {
-        margin: 10px;
-        padding: 10px;
-        width: 300px;
-    }
-    .wrapper h1 {
-        font-size: 30px;
-    }
-    .converter-body select {
-        font-size: 18px;
-    }
+@media (min-width: 320px) {
+	.wrapper {
+		margin: 10px;
+		padding: 10px;
+		width: 300px;
+	}
+	.wrapper h1 {
+		font-size: 30px;
+	}
+	.converter-body select {
+		font-size: 18px;
+	}
 }
-
 
 @media (min-width: 410px) {
-    .wrapper {
-        width: 380px;
-    }
-    .rate-info, .total {
-        font-size: 20px;
-    }
-
+	.wrapper {
+		width: 380px;
+	}
+	.rate-info,
+	.total {
+		font-size: 20px;
+	}
 }
 
 @media (min-width: 500px) {
-    .wrapper {
-        
-        width: 480px;
-    }
+	.wrapper {
+		width: 480px;
+	}
 }
 
 @media (min-width: 760px) {
-    .wrapper {
-        
-        width: 620px;
-    }
+	.wrapper {
+		width: 620px;
+	}
 
-    .wrapper h1 {
-        font-size: 44px;
-      margin-bottom: 28px;
-    }
-   
-    .rate-info, .total {
-        font-size: 26px;
-    }
-    
-    .rate-info {
-        margin-top: 10px;
-    }
-    .converter-body input {
-        width: 100%;
-        font-size: 28px;
-        margin-bottom: 30px;
-    }
-    .converter-body select {
-        font-size: 24px;
-    }
-    .changing {
-        font-size: 22px;
-    }
+	.wrapper h1 {
+		font-size: 44px;
+		margin-bottom: 28px;
+	}
+
+	.rate-info,
+	.total {
+		font-size: 26px;
+	}
+
+	.rate-info {
+		margin-top: 10px;
+	}
+	.converter-body input {
+		width: 100%;
+		font-size: 28px;
+		margin-bottom: 30px;
+	}
+	.converter-body select {
+		font-size: 24px;
+	}
+	.changing {
+		font-size: 22px;
+	}
 }
 
-    @media (min-width: 912px) {
-        .wrapper {
-          
-            width: 760px;
-        }
-    
-        .wrapper h1 {
-            font-size: 48px;
-            margin-top: 16px;
-          margin-bottom: 38px;
-        }
-       D
-        .rate-info {
-            margin-top: 10px;
-        }
-        .converter-body input {
-            width: 100%;
-            font-size: 30px;
-            margin-bottom: 28px;
-        }
+@media (min-width: 912px) {
+	.wrapper {
+		width: 760px;
+	}
 
-        .converter-body select {
-            font-size: 28px;
-        }
-        .changing {
-            font-size: 30px;
-        }
-    }
+	.wrapper h1 {
+		font-size: 48px;
+		margin-top: 16px;
+		margin-bottom: 38px;
+	}
 
+	.rate-info {
+		margin-top: 10px;
+	}
+	.converter-body input {
+		width: 100%;
+		font-size: 30px;
+		margin-bottom: 28px;
+	}
 
+	.converter-body select {
+		font-size: 28px;
+	}
+	.changing {
+		font-size: 30px;
+	}
+}
