--- a/style-calculator.css
+++ b/style-calculator.css
@@ -4,11 +4,6 @@
 	padding: 0;
 }
 
-/* :root {
-    --first-color: rgb(250, 20, 6);
-    --second-color: rgb(19, 139, 61);
-    --hover-color: rgb(68, 26, 184);
-} */
 
 body {
 	display: flex;
@@ -23,7 +18,12 @@ body {
 }
 
 .wrapper {
-	/* position: relative; */
+	position: relative;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	flex-direction: column;
+	overflow: hidden;
 	margin: 20px;
 	padding: 40px;
 	width: 500px;
@@ -39,20 +39,22 @@ body {
 
 .wrapper h1 {
 	font-size: 36px;
-	margin-bottom: 20px;
+	margin-bottom: 30px;
+	margin-right: 20px;
+	margin-left: 20px;
 }
 
-.info  {
+.info {
 	display: flex;
-    flex-direction: column;
-    justify-content: space-evenly;
-    /* align-items:flex-start; */
-    position: absolute;
+	flex-direction: column;
+	justify-content: space-evenly;
+	/* align-items:flex-start; */
+	position: absolute;
 	top: -10px;
-    right: 10px;
-    width: 40px;
-    height: 100px;
-  
+	right: 10px;
+	width: 40px;
+	height: 100px;
+
 	/* display: block; */
 	font-size: 20px;
 	padding: 10px;
@@ -61,7 +63,6 @@ body {
 	/* color: var(--second-color); */
 	cursor: pointer;
 	transition: color 0.3s;
-
 }
 
 .info .fa-palette {
@@ -70,6 +71,10 @@ body {
 
 .info .fa-circle-info {
 	right: 10px;
+}
+
+.info i:hover {
+	color: rgb(11, 55, 105);
 }
 
 .converter-body {
@@ -98,6 +103,7 @@ body {
 	border-radius: 5px;
 	background: none;
 	text-align: center;
+	margin-top: 15px;
 }
 
 ::-webkit-input-placeholder {
@@ -142,6 +148,15 @@ body {
 	cursor: pointer;
 }
 
+.changing:hover {
+	background-image: linear-gradient(
+		70deg,
+		rgba(15, 42, 68, 0),
+		rgb(102, 100, 235)
+	);
+	transform: scale(1.5);
+}
+
 .changing:focus {
 	outline: none;
 	background-image: linear-gradient(120deg, rgba(10, 42, 71, 0), rgb(4, 4, 26));
@@ -153,17 +168,174 @@ body {
 	padding-top: 15px;
 }
 
+.explanation {
+	display: none;
+	position: absolute;
+	width: 100%;
+	height: 100%;
+	background-color: rgba(0, 0, 0, 0.65);
+}
+
+.modal {
+	position: absolute;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+	text-align: center;
+	margin: auto;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+	width: 600px;
+	height: 360px;
+	padding: 30px 60px;
+	border-radius: 15px;
+	background-color: rgb(62, 88, 134);
+	color: #fff;
+	overflow: hidden;
+}
+
+/* button {
+    margin: 10px;
+	margin-bottom: 20px;
+    padding: 10px 20px;
+    width: 20%;
+    color: #Fff;
+    font-size: 20px;
+    background-color: transparent;
+    border: 1px solid var(--first-color);
+    border-radius: 5px;
+    cursor: pointer;
+    transition: background-color .3s;
+} */
+
+/* button:hover,
+button:focus {
+    background-color: var(--first-color);
+    outline: none;
+} */
+
+.modal h3 {
+	margin-top: 20px;
+	margin-bottom: 20px;
+	font-size: 24px;
+	text-decoration: underline;
+}
+
+.modal p {
+	/* display: flex; */
+	/* justify-content: center; */
+	text-align: center;
+	/* align-items: center; */
+	margin-bottom: 10px;
+	margin-left: 10px;
+	margin-right: 10px;
+	font-size: 20px;
+	/* text-align: justify; */
+}
+
+.wishes {
+	margin-top: 20px;
+}
+
+/* .modal i {
+    color: var(--first-color);
+} */
+
+.modal .close {
+	display: flex;
+	text-align: center;
+	justify-content: center;
+	align-items: center;
+	margin: 20px auto;
+	padding: 10px 20px;
+	font-size: 16px;
+	width: 100px;
+	background: linear-gradient(90deg, #0162c8, #55e7fc);
+	color: aliceblue;
+	letter-spacing: 3px;
+	text-transform: uppercase;
+	border-radius: 25px;
+}
+
+.modal .close:hover {
+	cursor: pointer;
+	background: linear-gradient(90deg, #043a74, #178b9c);
+	transform: translate(5px, -5px);
+}
+
+.modal-animation {
+	animation: show-modal 0.5s;
+}
+
+
+
+
+footer {
+	display: flex;
+	justify-content:center;
+	align-items: center;
+	position: fixed;
+	bottom: 0;
+	height: 10%;
+	/* line-height: 80px; */
+	background-color: #333;
+	color: #ddd;
+	/* text-align: center; */
+	font-size: 16px;
+	width: 100%;
+}
+
+.icon-box {
+	margin-left: 20px;
+	
+}
+
+.icon-box a {
+	margin: 0 5px;
+	color: #ddd;
+	font-size: 16px;
+	transition: color 0.3s;
+}
+
+.icon-box a:hover {
+	color: blue;
+}
+
+
 @media (min-width: 320px) {
 	.wrapper {
 		margin: 10px;
 		padding: 10px;
-		width: 300px;
+		width: 95%;
 	}
 	.wrapper h1 {
 		font-size: 30px;
+		margin-right: 25px;
+		margin-left: 25px;
+		margin-bottom: 10px;
 	}
 	.converter-body select {
 		font-size: 18px;
+	}
+	.modal {
+		width: 90%;
+		padding: 5px;
+		margin: auto;
+	}
+	.modal h3 {
+		text-align: center;
+		margin-top: 15px;
+	}
+	.modal p {
+		margin-bottom: 10px;
+		margin-left: 20px;
+		font-size: 16px;
+	}
+	.modal .close {
+		width: 100px;
+		font-size: 12px;
 	}
 }
 
