--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@ body {
     background-color: beige;
     font-family: Arial, Helvetica, sans-serif;
 }
+#suggestedResultsList,
 #movieList { 
     display: flex;
     align-items: center;
@@ -30,7 +31,7 @@ label  {
     color: black;
     display: block;
 }
-div#currentClickedMovieId {
+#currentClickedMovieId {
     /* display: flex; */
     display: grid;
     grid-template-columns: repeat(2, 1fr);
