Ordering names variables, ids, classes and suggestions from categories

--- a/style.css
+++ b/style.css
@@ -2,8 +2,22 @@ body {
     background-color: beige;
     font-family: Arial, Helvetica, sans-serif;
 }
-#suggestedResultsList,
-#movieList { 
+a {
+    cursor: pointer;
+}
+label  {
+    font-size: 1.5em;
+    color: black;
+    display: block;
+}
+input {
+    font-size: 1.5em;
+    /* font-weight: bold; */
+    color: black;
+    display: block;
+}
+.results-movies,
+.results-genres {
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -11,28 +25,24 @@ body {
     flex-direction: row;
     flex-wrap: wrap;
 }
-.singleMovieList {
+.selected-movie {
     width: 200px;
     height: 200px;
-    background: lightgray;
     display: flex;
     align-items: center;
     justify-content: center;
     align-content: center;
     flex-direction: row;
-    /* background styling */
     background-size: contain;
     background-repeat: no-repeat;
     background-position: center;
 }
-label  {
-    font-size: 1.5em;
-    font-weight: bold;
-    color: black;
-    display: block;
+.selected-movie a {
+    height: 100%;
+    width: 100%;
+    font-size: 0px;
 }
-#currentClickedMovieId {
-    /* display: flex; */
+.detail-conatiner {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     grid-column-gap: 30px;
@@ -41,19 +51,32 @@ label  {
     height: 100%;
     padding: 20px;
     margin: 50px auto;
-    /* background-color: rgb(245, 241, 241); */
 }
-.currentMovieImage img {
+.movie-image img {
     width: 100%;
     height: 100%;
 }
 .box-left,
 .box-right {
-    /* border: 2px solid red; */
     height: auto;
     float: left;
     background-color: rgb(245, 241, 241);
 }
 .box-right {
     padding: 20px;
+}
+/* suggestions */
+.genres-suggestions {
+    list-style: none;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    flex-direction: row;
+    margin: 50px auto;
+}
+li.single-genre {
+    background: black;
+    color: white;
+    padding: 10px 50px;
+    border-radius: 9px;
 }
