--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
-.logo {
-    display: block;
+#logo {
+    display:block;
     margin-left: auto;
     margin-right: auto;
     height: 200px;
@@ -17,6 +17,7 @@
 
 #Div-to-search {
     padding: 20px 150px;
+    min-width: 200px;
 }
 #Text-to-search {
     width: 100%;
@@ -43,4 +44,18 @@
     text-decoration: none;
     font-size: 16px;
     cursor: pointer;
+    margin-bottom: 50px;
+}
+
+.Result {
+    height: 200px;
+    width: 300px;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 30px;
+    margin-bottom: 30px;
+    text-align: center;
+    border: #000051 solid;
+    border-radius: 5px;
 }
