--- a/style.css
+++ b/style.css
@@ -5,18 +5,9 @@
     height: 200px;
 }
 
-.cover{
-    width: 100%;
-    object-fit: cover;
-}
-
-.backgroundCover {
-    position: absolute;
-    z-index: -1;
-}
 
 #Div-to-search {
-    padding: 20px 150px;
+    padding: 40px 150px;
     min-width: 200px;
 }
 #Text-to-search {
@@ -58,4 +49,11 @@
     text-align: center;
     border: #000051 solid;
     border-radius: 5px;
+}
+
+body {
+    margin: 0px;
+    padding: 0px;
+    background-image: url("background.jpg");
+    background-size: 100%;
 }
