--- a/style.css
+++ b/style.css
@@ -2,181 +2,454 @@
 	box-sizing: border-box;
 	margin: 0;
 	padding: 0;
-    font-family: 'Roboto Condensed', sans-serif;
 }
 
-
-html {
-	font-size: 62.5%;
+:root {
+	--first-color: rgba(240, 14, 14, 0.562);
+	--second-color: rgba(255, 255, 255, 0.43);
+	--third-color: rgba(27, 48, 182, 0.86);
+	--hover-color: rgba(67, 196, 228, 0.43);
 }
 
-.header-img {
-    /* position: relative; */
-    width: 100%;
-    height: 100vh;
-    background-image: url(./images/drew-beamer-xU5Mqq0Chck-unsplash.jpg);
-    background-size: cover;
-    background-position: center;
-}
-
-.header-text {
-	display: inline-block;
-	padding-top: 10%;
-	padding-left: 3%;
-	font-size: 2.5rem;
-	color: rgba(6, 124, 98, 0.842);
-}
-
-nav {
-	padding: 10px;
-	width: 100%;
+body {
+	font-family: 'Roboto Condensed', sans-serif;
 	display: flex;
-	justify-content: space-between;
+	justify-content: center;
 	align-items: center;
+	background-image: url('images/pexels-marek-piwnicki-8387336.jpg');
+	background-position: center;
+	background-size: cover;
+	background-repeat: no-repeat;
+	width: 100vw;
+	height: 100vh;
 }
 
-nav:hover {
-	background-color: rgb(164, 168, 168);
-	transition: .3s;
+.news {
+	font-family: 'Sansita', sans-serif;
+	display: block;
+	justify-content: center;
+	align-items: center;
+	text-align: center;
+	position: absolute;
+	margin: 10px;
+	top: 20px;
+	font-size: 36px;
+	font-weight: bold;
+	letter-spacing: 1px;
+	color:red;
 }
 
-nav li {
-	display: inline-block;
-	flex-direction: row;
+.wrapper {
+	position: relative;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	flex-direction: column;
+	overflow: hidden;
+	margin: 20px;
+	padding: 40px;
+	width: 500px;
+	text-align: center;
+	background: rgba(97, 106, 169, 0.74);
+	box-shadow: 0 4px 30px rgba(28, 127, 131, 0.1);
+	backdrop-filter: blur(7.6px);
+	-webkit-backdrop-filter: blur(7.6px);
+	border: 1px solid rgba(97, 106, 169, 0.65);
+	border-radius: 16px;
+	color: var(--first-color);
+}
+
+.wrapper h1 {
+	font-size: 36px;
+	margin-bottom: 30px;
+	margin-right: 20px;
+	margin-left: 20px;
+}
+
+.info {
+	display: flex;
+	flex-direction: column;
+	justify-content: space-evenly;
+	position: absolute;
+	top: -10px;
+	right: 10px;
+	width: 40px;
+	height: 40%;
+	font-size: 35px;
+	padding: 10px;
+	margin: 5px;
+	cursor: pointer;
+	transition: color 0.3s;
+}
+
+.info i:hover {
+	color: var(--hover-color);
+}
+
+.converter-body {
+	display: flex;
 	justify-content: center;
 	align-items: center;
 }
 
-nav a {
-	padding: 20px;
-	color: rgb(66, 60, 60);
-	text-decoration: none;
-	text-transform: uppercase;
-	font-weight: bold;
-	font-size: 1.8rem;
-	letter-spacing: 1px;
-	transition: color 0.2s;
+.left,
+.right {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
 }
 
-nav a:hover {
+.converter-body input {
+	width: 100%;
+	font-size: 12px;
+	margin-bottom: 10px;
+}
+
+.converter-body input,
+.converter-body select {
+	
+	color: var(--first-color);
+	border: 1px solid;
+	border-radius: 5px;
+	background: none;
+	text-align: center;
+	margin-top: 15px;
+}
+
+::-webkit-input-placeholder {
+	color: var(--first-color);
+}
+
+.converter-body select {
+	padding: 5px 10px;
+	cursor: pointer;
+	color: var(--first-color);
+}
+
+.converter-body input:focus,
+.converter-body select:focus {
+	outline: none;
+}
+
+.converter-body option,
+.converter-body select {
+	font-weight: bold;
+	letter-spacing: 2px;
+}
+
+.converter-body option {
+	color: rgba(0, 0, 0, 0.61);
+}
+
+.changing {
+	align-self: flex-end;
+	margin: 5px;
+	padding: 5px 20px;
+	font-size: 16px;
+	color: rgb(78, 3, 66);
+	background-image: linear-gradient(
+		120deg,
+		rgba(24, 128, 224, 0),
+		rgb(22, 20, 153)
+	);
+	border: none;
+	border-radius: 15px;
+	cursor: pointer;
+}
+
+.changing:hover {
+	background-image: linear-gradient(
+		70deg,
+		rgba(15, 42, 68, 0),
+		rgb(102, 100, 235)
+	);
+	transform: scale(1.5);
+}
+
+.changing:focus {
+	outline: none;
+	background-image: linear-gradient(120deg, rgba(10, 42, 71, 0), rgb(4, 4, 26));
+}
+
+.rate-info,
+.total {
+	font-size: 18px;
+	padding-top: 15px;
+	font-weight: bold;
+}
+
+.explanation {
+	display: none;
+	position: absolute;
+	width: 50%;
+	height: 100%;
+}
+
+.modal {
+	position: absolute;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+	text-align: center;
+	margin: auto;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+	width: 600px;
+	height: 360px;
+	padding: 30px 60px;
+	border-radius: 15px;
+	background-color: rgb(62, 88, 134);
+	color: #fff;
+	overflow: hidden;
+}
+
+.modal h3 {
+	margin-top: 20px;
+	margin-bottom: 20px;
+	font-size: 24px;
+	text-decoration: underline;
+}
+
+.modal p {
+	text-align: center;
+	margin-bottom: 10px;
+	margin-left: 10px;
+	margin-right: 10px;
+	font-size: 20px;
+}
+
+.wishes {
+	margin-top: 20px;
+}
+
+.modal .close {
+	display: flex;
+	text-align: center;
+	justify-content: center;
+	align-items: center;
+	margin: 20px auto;
+	padding: 10px 20px;
+	font-size: 16px;
+	width: 100px;
+	background: linear-gradient(90deg, #0162c8, #55e7fc);
+	color: aliceblue;
+	letter-spacing: 3px;
+	text-transform: uppercase;
+	border-radius: 25px;
+}
+
+.modal .close:hover {
+	cursor: pointer;
+	background: linear-gradient(90deg, #043a74, #178b9c);
+	transform: translate(5px, -5px);
+}
+
+.modal-animation {
+	animation: show-modal 0.5s;
+}
+
+.colors {
+	display: flex;
+	flex-direction: column;
+	justify-content: space-evenly;
+	align-items: center;
+	position: absolute;
+	top: 170px;
+	right: -100px;
+	width: 50px;
+	height: 170px;
+	transition: transform 0.3s;
+}
+
+.color {
+	width: 40px;
+	height: 40px;
+	border: 1px solid black;
+	border-radius: 50%;
+	cursor: pointer;
+	transition: background-color 0.5s;
+}
+
+.show-colors {
+	transform: translateX(-100px);
+}
+
+.first {
+	background-color: rgba(240, 14, 14, 0.562);
+}
+
+.second {
+	background-color: rgba(255, 255, 255, 0.43);
+}
+
+.third {
+	background-color: rgba(27, 48, 182, 0.86);
+}
+
+.first:hover {
+	background-color: rgba(202, 49, 49, 0.562);
+}
+
+.second:hover {
+	background-color: rgba(191, 195, 219, 0.43);
+}
+
+.third:hover {
+	background-color: rgba(74, 94, 226, 0.86);
+}
+
+footer {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	position: fixed;
+	bottom: 0;
+	height: 8%;
+	background-color: #333;
+	color: #ddd;
+	font-size: 16px;
+	width: 100%;
+}
+
+.icon-box {
+	margin-left: 20px;
+}
+
+.icon-box a {
+	margin: 0 5px;
+	color: #ddd;
+	font-size: 16px;
+	transition: color 0.3s;
+}
+
+.icon-box a:hover {
 	color: blue;
 }
 
-.fa-accusoft {
-	font-size: 3rem;
-	color: rgba(6, 124, 98, 0.842);
+@media (min-width: 320px) {
+	.news{
+	font-size: 18px;
+	}
+	.wrapper {
+		margin: 15px;
+		padding: 10px;
+		width: 95%;
+	}
+	.wrapper h1 {
+		font-size: 26px;
+		margin-right: 25px;
+		margin-left: 25px;
+		margin-bottom: 10px;
+	}
+	.converter-body input {
+		font-size: 18px;
+	}
+	.modal {
+		width: 90%;
+		padding: 5px;
+		margin: auto;
+	}
+	.modal h3 {
+		text-align: center;
+		margin-top: 15px;
+	}
+	.modal p {
+		margin-bottom: 10px;
+		margin-left: 20px;
+		font-size: 16px;
+	}
+	.modal .close {
+		width: 100px;
+		font-size: 12px;
+	}
+	.info {
+		height: 40%;
+		font-size: 18px;
+		padding: 10px;
+		margin: 10px;
+		right: 2px;
+	}
 }
 
-.logo span {
-	font-size: 3rem;
+@media (min-width: 410px) {
+	.wrapper {
+		width: 380px;
+	}
+	.rate-info,
+	.total {
+		font-size: 20px;
+	}
 }
 
-/* CALCULATOR */
-
-
-
-
-/* ORGANISER */
-
-.menu {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 30px;
+@media (min-width: 500px) {
+	.wrapper {
+		width: 480px;
+	}
+	.info {
+		height: 40%;
+		font-size: 16px;
+		padding: 5px;
+		margin: 5px;
+	}
 }
 
-.menu button, .panel-buttons .save, .panel-buttons .cancel {
-    padding: 10px 30px;
-    border: 1px solid black;
-    border-radius: 4px;
-    cursor: pointer;
-    transition: background-color .3s, color .3s;
+@media (min-width: 760px) {
+	.wrapper {
+		width: 620px;
+	}
+
+	.wrapper h1 {
+		font-size: 44px;
+		margin-bottom: 28px;
+	}
+
+	.rate-info,
+	.total {
+		font-size: 26px;
+	}
+
+	.rate-info {
+		margin-top: 10px;
+	}
+	.converter-body input {
+		width: 100%;
+		font-size: 28px;
+		margin-bottom: 30px;
+	}
+	.converter-body select {
+		font-size: 24px;
+	}
+	.changing {
+		font-size: 22px;
+	}
 }
 
-.menu button:hover, .panel-buttons .save:hover, .panel-buttons .cancel:hover {
-    background-color: rgb(31, 28, 28);
-    color: azure;
+@media (min-width: 912px) {
+	.wrapper {
+		width: 760px;
+	}
+
+	.wrapper h1 {
+		font-size: 48px;
+		margin-top: 16px;
+		margin-bottom: 38px;
+	}
+
+	.rate-info {
+		margin-top: 10px;
+	}
+	.converter-body input {
+		width: 100%;
+		font-size: 30px;
+		margin-bottom: 28px;
+	}
+
+	.converter-body select {
+		font-size: 28px;
+	}
+	.changing {
+		font-size: 30px;
+	}
 }
-
-.icon {
-   margin-right: 25px;
-}
-
-.add {
-    margin-right: 10px;
-}
-
-
-
-
-
-
-/* NAVIGATION */
-
-/* nav {
-	font-size: 2rem;
-	/* text-transform: uppercase; */
-
-
-/* .navbar-toggler {
-	font-size: 1.8rem;
-} */ 
-
-/* .navbar-brand {
-   	letter-spacing: 3px;
-	font-size: 2.5rem;
-	font-weight: bold;
-   } */
-   
-/* .dropdown-menu {
-    font-size: 1.8rem;
-} */
-
-
-
-/* input::-webkit-outer-spin-button,
-        input::-webkit-inner-spin-button {
-            -webkit-appearance: none;
-            margin: 0;
-        } */
-
-/* body {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
-    flex-direction: column;
-    font-family: 'Roboto Condensed', sans-serif;
-    background-image: url();
-} */
-
-/* -------------------------- */
-
-/* .upper-right {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    margin: 10px 20px;
-  } */
-
-/* .upper-right h2 {
-      padding: 10px;
-  } */
-
-/* ---------------------- */
-
-/* button {
-      background-color: rgb(24, 148, 55);
-      color: aliceblue;
-      margin: 10px;
-      padding: 10px 20px;
-      font-size: 20px;
-      border: 1px solid black;
-      border-radius: 10px;
-      cursor: pointer;
-      align-items: center;
-  } */
-/* 
-  p {
-      color: brown;
-  } */
