--- a/style.css
+++ b/style.css
@@ -38,18 +38,52 @@
     cursor: pointer;
     margin-bottom: 50px;
 }
-
-.Result {
-    height: 200px;
-    width: 300px;
+#Results {
+    height: auto;
+    width: 400px;
     display: block;
     margin-left: auto;
     margin-right: auto;
-    margin-top: 30px;
-    margin-bottom: 30px;
-    text-align: center;
+}
+
+.border{
+    padding: 20px;
     border: #000051 solid;
-    border-radius: 5px;
+    border-radius: 5px; 
+}
+
+.text {
+    height: auto;
+    width: auto;
+    margin-top: 10px;
+    margin-bottom: 10px;
+}
+
+.img {
+}
+
+.button {
+    padding: 30px;
+	box-shadow: 0px 1px 0px 0px #f0f7fa;
+	background-color:#000051;
+	border-radius:6px;
+	display:inline-block;
+	cursor:pointer;
+	color:#ffffff;
+	font-family:Arial;
+	font-size:15px;
+	font-weight:bold;
+	padding:6px 24px;
+	text-decoration:none;
+	text-shadow:0px -1px 0px #5b6178;
+    
+}
+.button:hover {
+	background-color:#000051;
+}
+.button:active {
+	position:relative;
+	top:1px;
 }
 
 body {
