--- a/style.css
+++ b/style.css
@@ -1,86 +1,33 @@
+/* CSS for all */
 body {
-  background-color: #f5f5f5;
+  background-color: #cc8866;
+  border-radius: 5px;
+  margin: 0;
 }
 
-#text-to-translate {
-  width: 100%;
-  min-height: 200px;
+/* CSS for main side */
+#main_page_section1 {
+  text-align: center;
+  padding: 25px;
 }
 
-#translated {
-  font-size: 200%;
+.main_para {
+  text-indent: 30px;
+  text-align: justify;
 }
 
-#news-list {
-  width: 100%;
+#main_div {
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-evenly;
 }
 
-.post {
-  width: 200px;
-  padding: 20px;
-  border: 1px solid #ccc;
-  margin-bottom: 30px;
+.main_image {
+  max-width: 100%;
 }
-
-.post img {
-  max-height: 100px;
+.main_page_div {
+  width: 250px;
+  height: auto;
+  border: 1px solid;
+  border-radius: 5px;
+  margin: 15px auto;
 }
-
-.temp {
-  font-size: 48px;
-}
-
-.weather-description {
-  font-size: 32px;
-}
-
-.error {
-  color: #f00;
-  font-size: 32px;
-}
-
-.loader,
-.loader:after {
-  border-radius: 50%;
-  width: 10em;
-  height: 10em;
-}
-.loader {
-  margin: 60px auto;
-  font-size: 10px;
-  position: relative;
-  text-indent: -9999em;
-  border-top: 1.1em solid #0dc5c1;
-  border-right: 1.1em solid #0dc5c1;
-  border-bottom: 1.1em solid #0dc5c1;
-  border-left: 1.1em solid #ffffff;
-  -webkit-transform: translateZ(0);
-  -ms-transform: translateZ(0);
-  transform: translateZ(0);
-  -webkit-animation: load8 1.1s infinite linear;
-  animation: load8 1.1s infinite linear;
-}
-@-webkit-keyframes load8 {
-  0% {
-    -webkit-transform: rotate(0deg);
-    transform: rotate(0deg);
-  }
-  100% {
-    -webkit-transform: rotate(360deg);
-    transform: rotate(360deg);
-  }
-}
-@keyframes load8 {
-  0% {
-    -webkit-transform: rotate(0deg);
-    transform: rotate(0deg);
-  }
-  100% {
-    -webkit-transform: rotate(360deg);
-    transform: rotate(360deg);
-  }
-}
-
