adding page 2 index.html and modified main.js and style.css

--- a/style.css
+++ b/style.css
@@ -31,3 +31,10 @@ body {
   border-radius: 5px;
   margin: 15px auto;
 }
+/* CSS for index_2_tibia */
+.news-list:nth-child(odd) {
+  background-color:#ca6939;
+}
+.news-list:nth-child(even) {
+  background-color:#cc8866;
+}
