--- a/style.css
+++ b/style.css
@@ -1,10 +1,13 @@
 /* CSS for all */
 body {
   background-color: #cc8866;
-  border-radius: 5px;
   margin: 0;
-  padding: 5px;
+  padding: 0;
   font-family: "Share Tech Mono", monospace;
+}
+
+#back {
+  padding: 10px;
 }
 
 a {
@@ -27,12 +30,13 @@ a:hover {
 /* CSS for main side */
 #main_page_section1 {
   text-align: center;
-  padding: 25px;
+  min-height: calc(100vh - 60px);
 }
 
 .main_para {
   text-indent: 30px;
   text-align: justify;
+  padding: 10px;
 }
 
 #main_div {
@@ -42,8 +46,8 @@ a:hover {
 
 .main_image {
   max-width: 100%;
-  /* height: 150px; */
 }
+
 .main_page_div {
   width: 250px;
   height: auto;
@@ -62,6 +66,19 @@ a:hover {
 #main_div a:hover {
   text-decoration: none;
   color: black;
+}
+footer {
+  text-align: center;
+  padding: 10px;
+  border-top: 1px solid;
+}
+
+#myFooter:hover {
+  text-decoration: none;
+}
+
+#myFooter:link {
+  text-decoration: none;
 }
 
 /*  CSS for index_2_tibia */
