--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
 }
 
 :root {
-	--first-color: rgba(240, 14, 14, 0.562);
+	--first-color: rgba(30, 226, 216, 0.699);
 	--second-color: rgba(255, 255, 255, 0.43);
 	--third-color: rgba(27, 48, 182, 0.86);
 	--hover-color: rgba(67, 196, 228, 0.43);
@@ -35,8 +35,8 @@ body {
 	top: 20px;
 	font-size: 36px;
 	font-weight: bold;
-	letter-spacing: 1px;
-	color:red;
+	letter-spacing: 2px;
+	color: rgb(255, 255, 255);
 }
 
 .wrapper {
@@ -75,7 +75,7 @@ body {
 	right: 10px;
 	width: 40px;
 	height: 40%;
-	font-size: 35px;
+	font-size: 45px;
 	padding: 10px;
 	margin: 5px;
 	cursor: pointer;
@@ -139,21 +139,20 @@ body {
 
 .converter-body option {
 	color: rgba(0, 0, 0, 0.61);
+	font-size: 22px;
 }
 
 .changing {
+	display: flex;
+	justify-content: center;
 	align-self: flex-end;
-	margin: 5px;
-	padding: 5px 20px;
+	width: 100px;
+	margin: 20px auto 0;
+	padding: 10px 20px;
 	font-size: 16px;
-	color: rgb(78, 3, 66);
-	background-image: linear-gradient(
-		120deg,
-		rgba(24, 128, 224, 0),
-		rgb(22, 20, 153)
-	);
-	border: none;
-	border-radius: 15px;
+	color: aliceblue;
+	background: linear-gradient(90deg, #0162c8, #55e7fc);
+	border-radius: 25px;
 	cursor: pointer;
 }
 
@@ -163,7 +162,7 @@ body {
 		rgba(15, 42, 68, 0),
 		rgb(102, 100, 235)
 	);
-	transform: scale(1.5);
+	transform: scale(1.2);
 }
 
 .changing:focus {
@@ -243,7 +242,7 @@ body {
 .modal .close:hover {
 	cursor: pointer;
 	background: linear-gradient(90deg, #043a74, #178b9c);
-	transform: translate(5px, -5px);
+	transform: translate(3px, -3px);
 }
 
 .modal-animation {
@@ -256,7 +255,7 @@ body {
 	justify-content: space-evenly;
 	align-items: center;
 	position: absolute;
-	top: 170px;
+	bottom: 10px;
 	right: -100px;
 	width: 50px;
 	height: 170px;
@@ -277,7 +276,7 @@ body {
 }
 
 .first {
-	background-color: rgba(240, 14, 14, 0.562);
+	background-color: rgba(30, 226, 216, 0.699);
 }
 
 .second {
@@ -289,7 +288,7 @@ body {
 }
 
 .first:hover {
-	background-color: rgba(202, 49, 49, 0.562);
+	background-color: rgba(16, 165, 158, 0.466);
 }
 
 .second:hover {
@@ -332,16 +331,17 @@ footer {
 	.news{
 	font-size: 18px;
 	}
+	
 	.wrapper {
 		margin: 15px;
 		padding: 10px;
 		width: 95%;
 	}
 	.wrapper h1 {
-		font-size: 26px;
+		font-size: 30px;
 		margin-right: 25px;
 		margin-left: 25px;
-		margin-bottom: 10px;
+		/* margin-bottom: 2px; */
 	}
 	.converter-body input {
 		font-size: 18px;
@@ -367,13 +367,16 @@ footer {
 	.info {
 		height: 40%;
 		font-size: 18px;
-		padding: 10px;
-		margin: 10px;
+		padding: 5px;
+		margin: 5px;
 		right: 2px;
+	}
+	.converter-body{
+		margin-top: 25px;
 	}
 }
 
-@media (min-width: 410px) {
+/* @media (min-width: 390px) {
 	.wrapper {
 		width: 380px;
 	}
@@ -381,18 +384,29 @@ footer {
 	.total {
 		font-size: 20px;
 	}
-}
+} */
 
 @media (min-width: 500px) {
 	.wrapper {
 		width: 480px;
 	}
+
 	.info {
 		height: 40%;
-		font-size: 16px;
+		font-size: 18px;
 		padding: 5px;
 		margin: 5px;
 	}
+	.converter-body{
+		margin: 15px;
+	}
+	
+	/* .changing{
+		font-size: 20px;
+		width: 100px;
+		height: 30px;
+	} */
+	/* teraz i wyskakuje poza obiekt, dlaczego  */
 }
 
 @media (min-width: 760px) {
@@ -451,5 +465,8 @@ footer {
 	}
 	.changing {
 		font-size: 30px;
+	}
+	.info{
+		font-size: 26px;
 	}
 }
