--- a/style.css
+++ b/style.css
@@ -55,6 +55,9 @@ a:hover {
   border-radius: 5px;
   margin: 15px auto;
   transition: 0.7s ease-in-out;
+  -webkit-box-shadow: 0px 0px 50px 0px rgba(66, 68, 90, 1);
+  -moz-box-shadow: 0px 0px 50px 0px rgba(66, 68, 90, 1);
+  box-shadow: 0px 0px 50px 0px rgba(66, 68, 90, 1);
 }
 .main_page_div:hover {
   width: 300px;
@@ -71,6 +74,9 @@ footer {
   text-align: center;
   padding: 10px;
   border-top: 1px solid;
+  -webkit-box-shadow: 0px 0px 50px 0px rgba(66, 68, 90, 1);
+  -moz-box-shadow: 0px 0px 50px 0px rgba(66, 68, 90, 1);
+  box-shadow: 0px 0px 50px 0px rgba(66, 68, 90, 1);
 }
 
 #myFooter:hover {
@@ -85,6 +91,9 @@ footer {
 .news-list:nth-child(odd) {
   background-color: #ca6939;
   padding: 5px;
+  -webkit-box-shadow: 0px -3px 35px -10px rgba(66, 68, 90, 1);
+  -moz-box-shadow: 0px -3px 35px -10px rgba(66, 68, 90, 1);
+  box-shadow: 0px -3px 35px -10px rgba(66, 68, 90, 1);
 }
 .news-list:nth-child(even) {
   background-color: #cc8866;
@@ -109,6 +118,9 @@ footer {
   margin: 5px;
   text-align: center;
   padding: 5px;
+  -webkit-box-shadow: 0px 0px 50px 0px rgba(66, 68, 90, 1);
+  -moz-box-shadow: 0px 0px 50px 0px rgba(66, 68, 90, 1);
+  box-shadow: 0px 0px 50px 0px rgba(66, 68, 90, 1);
 }
 
 #page3_h1 {
@@ -119,6 +131,9 @@ footer {
 .world-list:nth-child(odd) {
   background-color: #ca6939;
   padding: 5px;
+  -webkit-box-shadow: 0px -3px 35px -10px rgba(66, 68, 90, 1);
+  -moz-box-shadow: 0px -3px 35px -10px rgba(66, 68, 90, 1);
+  box-shadow: 0px -3px 35px -10px rgba(66, 68, 90, 1);
 }
 .world-list:nth-child(even) {
   background-color: #cc8866;
@@ -144,6 +159,9 @@ footer {
   text-align: center;
   border: 1px solid;
   border-radius: 5px;
+  -webkit-box-shadow: 0px 0px 50px 0px rgba(66, 68, 90, 1);
+  -moz-box-shadow: 0px 0px 50px 0px rgba(66, 68, 90, 1);
+  box-shadow: 0px 0px 50px 0px rgba(66, 68, 90, 1);
 }
 
 #page5_h1 {
@@ -154,6 +172,9 @@ footer {
 .spell_list:nth-child(odd) {
   background-color: #ca6939;
   padding: 5px;
+  -webkit-box-shadow: 0px -3px 35px -10px rgba(66, 68, 90, 1);
+  -moz-box-shadow: 0px -3px 35px -10px rgba(66, 68, 90, 1);
+  box-shadow: 0px -3px 35px -10px rgba(66, 68, 90, 1);
 }
 .spell_list:nth-child(even) {
   background-color: #cc8866;
