--- a/style.css
+++ b/style.css
@@ -40,34 +40,83 @@
 }
 #Results {
     height: auto;
-    width: 400px;
+    width: 500px;
     display: block;
     margin-left: auto;
     margin-right: auto;
 }
 
 .border{
-    padding: 20px;
+    height: 400px;
+    margin: 20px;
+    padding: 10px;
     border: #000051 solid;
     border-radius: 5px; 
 }
 
 .text {
+    float: right;
     height: auto;
-    width: auto;
-    margin-top: 10px;
-    margin-bottom: 10px;
+    width: 50%;
+    word-wrap: break-word;
+    margin: 10px;
+    font-size: 22px;
+    font-weight: bold;
+}
+
+.textAuthor {
+    float: right;
+    height: auto;
+    width: 50%;
+    word-wrap: break-word;
+    margin: 10px;
+    font-size: 20px;
+    font-weight: bold;
+}
+
+.textSubject {
+    float: right;
+    height: auto;
+    width: 50%;
+    word-wrap: break-word;
+    margin: 10px;
+    font-size: 20px;
+    font-weight: bold;
+}
+
+.textPublication {
+    float: right;
+    height: auto;
+    width: 50%;
+    word-wrap: break-word;
+    margin: 10px;
+    font-size: 20px;
+    
+}
+
+.textPages {
+    float: right;
+    height: auto;
+    width: 50%;
+    word-wrap: break-word;
+    margin: 10px;
+    font-size: 20px;
+    
 }
 
 .img {
+    vertical-align: top;
+    width: 40%;
+    max-height: 250px;
+    overflow:auto;
 }
 
 .button {
-    padding: 30px;
+    float: right;
+    margin: 40px;
 	box-shadow: 0px 1px 0px 0px #f0f7fa;
 	background-color:#000051;
 	border-radius:6px;
-	display:inline-block;
 	cursor:pointer;
 	color:#ffffff;
 	font-family:Arial;
