--- a/style.css
+++ b/style.css
@@ -143,7 +143,7 @@ body {
 /* Section --1 */
 
 #section--1 {
-  padding: 8rem 0;
+  padding: 0 8rem 0;
 }
 
 .section__title {
@@ -196,14 +196,14 @@ body {
 }
 
 .section__header h1 {
-  text-transform: uppercase;
-  padding: 2rem;
-  margin-bottom: 3rem;
-  font-size: 3rem;
+  /* text-transform: uppercase; */
+  max-width: 80%;
+  margin: 0 12rem 12rem 12rem;
+  font-size: 5rem;
 }
 
 .search__container {
-  margin: 5rem 5rem 5rem 0;
+  margin: 0 5rem 5rem 0;
   padding: 0 2rem 0 2rem;
   font-size: 3.5rem;
   float: left;
@@ -242,7 +242,7 @@ body {
   /* border:1px solid rgba(66, 68, 90, 1); */
   font-size: 6rem;
   width: 70%;
-  margin: 15rem;
+  margin: 5rem 15rem 15rem 15rem;
   border-radius: 20px;
   box-shadow: 0px 0px 30px -7px rgba(66, 68, 90, 1);
 }
@@ -312,7 +312,30 @@ body {
 }
 
 .footer__copyright {
+  margin: 5rem 0 0 0 ;
   font-size: 3rem;
+}
+
+.footer__copyright a {
+  font-size: 3rem;
+  text-decoration: none;
+  color: var(--color-secondary-brighter)
+}
+
+.links__icons{
+  font-size: 25rem;
+}
+
+.fa-twitter{
+  color: rgb(61, 178, 255);
+}
+
+.fa-github{
+  color: rgb(41, 41, 41);
+}
+
+.fa-linkedin{
+  color: rgb(0, 69, 133);
 }
 
 /* Others */
