--- a/loader.css
+++ b/loader.css
@@ -1,4 +1,16 @@
+.loader-container {
+  display: none;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.1);
+}
+.loader-container.visible {
+  min-height: 300px;
+  display: flex;
+  justify-content: center;
+}
 .loader {
+  position: absolute;
     color: #fff;
     font-size: 10px;
     width: 1em;
